--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -22,7 +22,8 @@
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "tslint": "^5.19.0"
   },
   "nyc": {
     "extension": [
@@ -33,6 +34,6 @@
       "**/*.spec.ts",
       "**/*.d.ts"
     ],
-    "all": true  
+    "all": true
   }
 }
